<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descr_status" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/textView1"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="4dp"
        android:entries="@array/BarStyles" />

    <View
        android:id="@+id/view1"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/spinner1"
        android:layout_marginBottom="24dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/view1"
        android:text="@string/descr_nav" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="4dp"
        android:entries="@array/BarStyles" />

    <View
        android:id="@+id/view2"
        android:layout_width="wrap_content"
        android:layout_height="57dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/spinner2" />

    <TextView
        android:id="@+id/textView_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView_info"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="24dp"
        android:text="@string/btn_restart_systemui"
        android:textSize="16sp" />

</RelativeLayout>
